[package]
name = "whitespace"
version = "0.1.0"
edition = "2021"
# https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
argparse = "0.2.2"
fnv = "1.0.7"
indexmap = "2.9"
lazy_static = "1.5.0"
unicode-segmentation = "1.10.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6.0"
wasm-bindgen = "0.2.100"
